LT_2 :  implemented updated the leave status and get all leave request and leave count detail api

--- a/hrms-service /src/main/resources/application.properties
+++ b/hrms-service /src/main/resources/application.properties
@@ -18,7 +18,29 @@ spring.datasource.username=${MYSQL_USER}
 spring.datasource.password=${MYSQL_PASS}
 #=================================
 #spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.generate_statistics=true
 spring.batch.job.enabled=false
+spring.jpa.properties.hibernate.type=trace
+
+logging.level.org.hibernate.stat=debug
+logging.level.org.hibernate.SQL=debug
+logging.level.org.hibernate.orm.jdbc.bind=trace
+
+
+
+#==============================================
+#email sender
+# Email Properties
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=rushikesh.softvan@gmail.com
+spring.mail.password=qgdl tzpr dtbh slwa
+spring.mail.default-encoding=UTF-8
+spring.mail.protocol=smtp
+spring.mail.test-connection=false
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.thymeleaf.prefix=classpath:/templates/
+
 
