--- a/hrms-frontend/package.json
+++ b/hrms-frontend/package.json
@@ -9,6 +9,7 @@
     "@emotion/cache": "^11.10.3",
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
+    "@fortawesome/fontawesome-free": "^6.7.2",
     "@mui/lab": "^5.0.0-alpha.100",
     "@mui/material": "^5.10.6",
     "@reduxjs/toolkit": "^1.8.5",
